Added median correlation analysis

--- a/0.data_analysis/construct_phenotypic_expression_plate_4_fs_data/median_correlation_relationships/median_cross_corr.ipynb
+++ b/0.data_analysis/construct_phenotypic_expression_plate_4_fs_data/median_correlation_relationships/median_cross_corr.ipynb
@@ -24,10 +24,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:24.737477Z",
-     "iopub.status.busy": "2023-07-20T17:49:24.737376Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.221734Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.221283Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.218328Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.218226Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.694993Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.694486Z"
     },
     "jukit_cell_id": "B4dOVgAcpG"
    },
@@ -56,10 +56,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.223749Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.223550Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.226526Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.226191Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.696973Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.696819Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.699693Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.699298Z"
     },
     "jukit_cell_id": "DUsPsvZlzR"
    },
@@ -97,10 +97,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.228083Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.227982Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.229971Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.229677Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.701022Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.700920Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.702847Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.702532Z"
     },
     "jukit_cell_id": "lBmYF7sI2F"
    },
@@ -124,10 +124,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.231711Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.231443Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.233873Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.233582Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.704205Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.704001Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.706160Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.705857Z"
     },
     "jukit_cell_id": "YrQdXMCWos"
    },
@@ -160,10 +160,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.235398Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.235128Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.292532Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.292175Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.707587Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.707338Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.768114Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.767685Z"
     },
     "jukit_cell_id": "ZSSRCnhaod"
    },
@@ -186,10 +186,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.294321Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.294180Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.296305Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.296046Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.769854Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.769691Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.772018Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.771697Z"
     },
     "jukit_cell_id": "5cHmKu7doJ"
    },
@@ -220,10 +220,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.297460Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.297280Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.305578Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.305276Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.773201Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.772976Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.781370Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.781001Z"
     },
     "jukit_cell_id": "ZFMWcWLXGG"
    },
@@ -250,10 +250,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.306861Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.306666Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.399208Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.398793Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.782766Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.782558Z",
+     "iopub.status.idle": "2023-07-21T14:51:16.870901Z",
+     "shell.execute_reply": "2023-07-21T14:51:16.870445Z"
     },
     "jukit_cell_id": "5njtR70Q7i"
    },
@@ -278,10 +278,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.400687Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.400572Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.532723Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.532341Z"
+     "iopub.execute_input": "2023-07-21T14:51:16.872870Z",
+     "iopub.status.busy": "2023-07-21T14:51:16.872744Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.004118Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.003658Z"
     },
     "jukit_cell_id": "pMUrObIEPk"
    },
@@ -318,10 +318,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.534672Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.534502Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.538282Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.538024Z"
+     "iopub.execute_input": "2023-07-21T14:51:17.005994Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.005886Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.009555Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.009207Z"
     },
     "jukit_cell_id": "1ML9tWsMGn"
    },
@@ -348,10 +348,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.540345Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.540176Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.544397Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.544140Z"
+     "iopub.execute_input": "2023-07-21T14:51:17.011101Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.010848Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.016119Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.015772Z"
     },
     "jukit_cell_id": "RCHdxHGrzs"
    },
@@ -364,7 +364,7 @@
     "    Parameters\n",
     "    ----------\n",
     "    same_construct: Boolean\n",
-    "        Whether to consider different construct or the same constructs with calculate cross correlations between cells\n",
+    "        Whether to consider different construct or the same constructs when calculating cross correlations between cells\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -372,8 +372,18 @@
     "    Contains the cell correlation vectors for each group\n",
     "    \"\"\"\n",
     "\n",
+    "    # Specify the comparison type for tidy long format reconstruction\n",
+    "    if same_construct:\n",
+    "        comp = \"same_construct\"\n",
+    "\n",
+    "    else:\n",
+    "        comp = \"different_construct\"\n",
+    "\n",
     "    # Groups that have already been considered\n",
     "    tried_wells = []\n",
+    "\n",
+    "    # Dictionary for reconstructing the correlation data\n",
+    "    corr_data = defaultdict(list)\n",
     "\n",
     "    # Holds correlations for siRNA constructs and concentrations\n",
     "    transwell = defaultdict(list)\n",
@@ -410,13 +420,16 @@
     "                & (platedf[\"Metadata_Well\"] != well)\n",
     "            ]\n",
     "\n",
+    "        num_cellsa = len(welldf)\n",
+    "        num_cellsb = len(other_welldf)\n",
+    "\n",
     "        # If there are no cells from either of these groups to cross correlate, the next group is considered\n",
-    "        if len(welldf) == 0 or len(other_welldf) == 0:\n",
+    "        if num_cellsa == 0 or num_cellsb == 0:\n",
     "            continue\n",
     "\n",
     "        # Get the indices corresponding to each cell for the two dataframes to compare, where the indices are also used to reference the columns\n",
-    "        welldf_idx = welldf[not_meta_cols].index\n",
-    "        other_welldf_idx = other_welldf[not_meta_cols].index\n",
+    "        welldf_idx = welldf.index\n",
+    "        other_welldf_idx = other_welldf.index\n",
     "\n",
     "        # Find the correlation coefficients from the indices\n",
     "        corr_df = allcorr.loc[welldf_idx, other_welldf_idx]\n",
@@ -424,17 +437,24 @@
     "        # Convert the correlation values and flatten them\n",
     "        corr_vec = corr_df.values.flatten()\n",
     "\n",
-    "        # There shouldn't be nans, but remove numpy nans from each correlation vector if nans exist\n",
-    "        nan_idx = np.isnan(corr_vec)\n",
-    "        corr_vec = corr_vec[~nan_idx]\n",
+    "        # Number of correlation values\n",
+    "        num_corr = corr_vec.shape[0]\n",
+    "\n",
+    "        # Record the correlation data\n",
+    "        corr_data[\"first_well\"].extend(welldf_idx.repeat(num_cellsb).tolist())\n",
+    "        corr_data[\"second_well\"].extend(other_welldf_idx.tolist() * num_cellsa)\n",
+    "        corr_data[\"pearsons_coef\"].append(corr_vec)\n",
+    "        corr_data[\"construct\"] += [construct] * num_corr\n",
+    "        corr_data[\"concentration\"] += [conc] * num_corr\n",
     "\n",
     "        # Keep track of the wells used for the correlation\n",
     "        tried_wells.append(well)\n",
     "\n",
-    "        # Record the correlations constructs and SiRNA concentrations\n",
-    "        transwell[f\"{construct}_{conc}\"].append(corr_vec)\n",
+    "    # Combine the correlation data\n",
+    "    corr_data[\"comparison\"] = [comp] * len(corr_data[\"first_well\"])\n",
+    "    corr_data[\"pearsons_coef\"] = np.concatenate(corr_data[\"pearsons_coef\"])\n",
     "\n",
-    "    return transwell"
+    "    return corr_data"
    ]
   },
   {
@@ -451,10 +471,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.546021Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.545853Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.588230Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.587918Z"
+     "iopub.execute_input": "2023-07-21T14:51:17.017554Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.017350Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.049186Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.048894Z"
     },
     "jukit_cell_id": "YIjuXgOFcS"
    },
@@ -462,11 +482,8 @@
    "source": [
     "same_transwell = get_correlations(same_construct=True)\n",
     "\n",
-    "# Concatenate all correlation values in one numpy array for each group\n",
-    "same_construct = {\n",
-    "    sirna_group: np.concatenate(corr_vecs)\n",
-    "    for sirna_group, corr_vecs in same_transwell.items()\n",
-    "}"
+    "# Create a dataframe for the correlation data\n",
+    "same_construct = pd.DataFrame(same_transwell)"
    ]
   },
   {
@@ -483,10 +500,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.589932Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.589756Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.636047Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.635735Z"
+     "iopub.execute_input": "2023-07-21T14:51:17.050907Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.050622Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.079461Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.079168Z"
     },
     "jukit_cell_id": "JBHBntj0rf"
    },
@@ -495,10 +512,33 @@
     "diff_transwell = get_correlations(same_construct=False)\n",
     "\n",
     "# Concatenate all correlation values in one numpy array for each group\n",
-    "diff_construct = {\n",
-    "    sirna_group: np.concatenate(corr_vecs)\n",
-    "    for sirna_group, corr_vecs in diff_transwell.items()\n",
-    "}"
+    "diff_construct = pd.DataFrame(diff_transwell)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jukit_cell_id": "PNyrWpifi1"
+   },
+   "source": [
+    "## Combine the comparison data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-21T14:51:17.081101Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.080970Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.083767Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.083405Z"
+    },
+    "jukit_cell_id": "xN51KwSh0M"
+   },
+   "outputs": [],
+   "source": [
+    "final_construct = pd.concat([same_construct, diff_construct], axis=0)"
    ]
   },
   {
@@ -512,13 +552,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.637901Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.637667Z",
-     "iopub.status.idle": "2023-07-20T17:49:25.640039Z",
-     "shell.execute_reply": "2023-07-20T17:49:25.639795Z"
+     "iopub.execute_input": "2023-07-21T14:51:17.085290Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.084988Z",
+     "iopub.status.idle": "2023-07-21T14:51:17.087658Z",
+     "shell.execute_reply": "2023-07-21T14:51:17.087310Z"
     },
     "jukit_cell_id": "FfWC7PVvFM"
    },
@@ -534,9 +574,10 @@
     "xs = np.linspace(-1, 1, 500)\n",
     "\n",
     "# Define correlation distributions in a dictionary\n",
+    "pos_comparisons = final_construct[\"comparison\"].unique()\n",
     "corr_dists = {\n",
-    "    \"Same Construct Across Wells\": same_construct,\n",
-    "    \"Different Construct Across Wells\": diff_construct,\n",
+    "    \"Same Construct Across Wells\": pos_comparisons[0],\n",
+    "    \"Different Construct Across Wells\": pos_comparisons[1],\n",
     "}"
    ]
   },
@@ -551,13 +592,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-20T17:49:25.641841Z",
-     "iopub.status.busy": "2023-07-20T17:49:25.641622Z",
-     "iopub.status.idle": "2023-07-20T17:49:27.556705Z",
-     "shell.execute_reply": "2023-07-20T17:49:27.556407Z"
+     "iopub.execute_input": "2023-07-21T14:51:17.089176Z",
+     "iopub.status.busy": "2023-07-21T14:51:17.088911Z",
+     "iopub.status.idle": "2023-07-21T14:51:19.042418Z",
+     "shell.execute_reply": "2023-07-21T14:51:19.042044Z"
     },
     "jukit_cell_id": "3JyLIh77pw"
    },
@@ -671,12 +712,16 @@
     "        fig, ax = plt.subplots(figsize=(15, 11))\n",
     "\n",
     "        # Define each combination to reference correlation distributions\n",
-    "        panel = f\"{const}_{group}\"\n",
+    "        panel = (final_construct[\"construct\"] == const) & (\n",
+    "            final_construct[\"concentration\"] == group\n",
+    "        )\n",
+    "\n",
+    "        df = final_construct.loc[panel]\n",
     "\n",
     "        # Plot each distribution for a given panel\n",
-    "        for dlabel, dist in corr_dists.items():\n",
+    "        for dlabel, comp in corr_dists.items():\n",
     "            # Get the kde distribtion for the correlation data\n",
-    "            w_x = dist[panel]\n",
+    "            w_x = df.loc[df[\"comparison\"] == comp][\"pearsons_coef\"].values\n",
     "            w_density = gaussian_kde(w_x)\n",
     "            w_y = w_density(xs)\n",
     "\n",
@@ -685,9 +730,8 @@
     "        ax.set_xlabel(\"Pairwise Correlation\")\n",
     "        ax.set_ylabel(\"Probability Density\")\n",
     "        ax.legend()\n",
-    "        ax.set_title(panel)\n",
     "        ax.set_title(f\"KDE of Pairwise Correlations: ({const} Construct at {group}nM)\")\n",
-    "        fig.savefig(f\"{output_path}/pdf_{panel}.png\")\n",
+    "        fig.savefig(f\"{output_path}/pdf_{const}_{group}.png\")\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
