Sorted the imports

--- a/0.data_analysis/construct_phenotypic_expression_plate_4_fs_data/median_correlation_relationships/median_cross_corr.ipynb
+++ b/0.data_analysis/construct_phenotypic_expression_plate_4_fs_data/median_correlation_relationships/median_cross_corr.ipynb
@@ -24,18 +24,18 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.032504Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.032413Z",
-     "iopub.status.idle": "2023-07-21T15:49:05.201445Z",
-     "shell.execute_reply": "2023-07-21T15:49:05.201114Z"
+     "iopub.execute_input": "2023-07-21T18:28:04.898730Z",
+     "iopub.status.busy": "2023-07-21T18:28:04.898632Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.067328Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.067019Z"
     },
     "jukit_cell_id": "B4dOVgAcpG"
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import sys\n",
     "from pathlib import Path\n",
-    "import sys"
+    "import pandas as pd"
    ]
   },
   {
@@ -52,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.203137Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.202967Z",
-     "iopub.status.idle": "2023-07-21T15:49:05.205367Z",
-     "shell.execute_reply": "2023-07-21T15:49:05.205109Z"
+     "iopub.execute_input": "2023-07-21T18:28:05.068989Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.068830Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.071593Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.071304Z"
     },
     "jukit_cell_id": "DUsPsvZlzR"
    },
@@ -93,10 +93,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.206694Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.206469Z",
-     "iopub.status.idle": "2023-07-21T15:49:05.515917Z",
-     "shell.execute_reply": "2023-07-21T15:49:05.515603Z"
+     "iopub.execute_input": "2023-07-21T18:28:05.072964Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.072751Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.377863Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.377530Z"
     },
     "jukit_cell_id": "QYUe8mL5Xf"
    },
@@ -122,10 +122,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.517660Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.517316Z",
-     "iopub.status.idle": "2023-07-21T15:49:05.519557Z",
-     "shell.execute_reply": "2023-07-21T15:49:05.519299Z"
+     "iopub.execute_input": "2023-07-21T18:28:05.379463Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.379238Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.381925Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.381635Z"
     },
     "jukit_cell_id": "YrQdXMCWos"
    },
@@ -140,10 +140,13 @@
     ")\n",
     "\n",
     "# Add the output path here:\n",
-    "output_path = Path(\"figures\")\n",
+    "output_path_figures = Path(\"figures\")\n",
     "\n",
-    "# Create the directory if it doesn't exist\n",
-    "output_path.mkdir(parents=True, exist_ok=True)"
+    "output_path_data = Path(\"data\")\n",
+    "\n",
+    "# Create the directories if they don't exist\n",
+    "output_path_figures.mkdir(parents=True, exist_ok=True)\n",
+    "output_path_data.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -160,10 +163,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.520661Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.520537Z",
-     "iopub.status.idle": "2023-07-21T15:49:05.577412Z",
-     "shell.execute_reply": "2023-07-21T15:49:05.577042Z"
+     "iopub.execute_input": "2023-07-21T18:28:05.383497Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.383294Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.437166Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.436699Z"
     },
     "jukit_cell_id": "ZSSRCnhaod"
    },
@@ -186,10 +189,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.579115Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.578979Z",
-     "iopub.status.idle": "2023-07-21T15:49:05.866590Z",
-     "shell.execute_reply": "2023-07-21T15:49:05.866220Z"
+     "iopub.execute_input": "2023-07-21T18:28:05.438916Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.438769Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.729545Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.728896Z"
     },
     "jukit_cell_id": "a5SftqCchx"
    },
@@ -198,7 +201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/construct_phenotypic_expression_plate_4_fs_data/utils/create_correlations.py:73: SettingWithCopyWarning: \n",
+      "/home/camo/projects/NF1_SchwannCell_data_analysis/0.data_analysis/construct_phenotypic_expression_plate_4_fs_data/utils/create_correlations.py:72: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -214,6 +217,32 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jukit_cell_id": "219wNfpJ8v"
+   },
+   "source": [
+    "## Save the correlation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-21T18:28:05.757528Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.757385Z",
+     "iopub.status.idle": "2023-07-21T18:28:05.761190Z",
+     "shell.execute_reply": "2023-07-21T18:28:05.760829Z"
+    },
+    "jukit_cell_id": "WugJq7wiSN"
+   },
+   "outputs": [],
+   "source": [
+    "corr_obj.final_construct.to_csv(output_path_data / \"correlation_data.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "jukit_cell_id": "DWM2pLB7t0"
    },
    "source": [
@@ -222,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-21T15:49:05.894802Z",
-     "iopub.status.busy": "2023-07-21T15:49:05.894644Z",
-     "iopub.status.idle": "2023-07-21T15:49:07.834178Z",
-     "shell.execute_reply": "2023-07-21T15:49:07.833808Z"
+     "iopub.execute_input": "2023-07-21T18:28:05.762750Z",
+     "iopub.status.busy": "2023-07-21T18:28:05.762572Z",
+     "iopub.status.idle": "2023-07-21T18:28:07.710508Z",
+     "shell.execute_reply": "2023-07-21T18:28:07.710146Z"
     },
     "jukit_cell_id": "Rpcb1PbI55"
    },
@@ -335,7 +364,7 @@
     }
    ],
    "source": [
-    "corr_obj.plot_correlations(output_path=output_path)"
+    "corr_obj.plot_correlations(output_path=output_path_figures)"
    ]
   }
  ],
