--- a/1.train_models/log_reg_plates_cp_fs_data/plate_4/plate_4_classify_genotype.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plate_4/plate_4_classify_genotype.ipynb
@@ -6,7 +6,7 @@
                 "jukit_cell_id": "RUaS7hws7w"
             },
             "source": [
-                "# Train a logistic regression to classify genotypes for plate 4"
+                "# Train logistic regressions to classify genotypes for plate 4"
             ]
         },
         {
@@ -14,10 +14,10 @@
             "execution_count": 1,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:33.640054Z",
-                    "iopub.status.busy": "2023-08-17T16:46:33.639955Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.017899Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.017500Z"
+                    "iopub.execute_input": "2023-09-01T13:33:04.877843Z",
+                    "iopub.status.busy": "2023-09-01T13:33:04.877605Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.274218Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.273825Z"
                 },
                 "jukit_cell_id": "Uldv3YbqHx"
             },
@@ -32,11 +32,7 @@
                 "from scipy.stats import uniform\n",
                 "from sklearn.exceptions import ConvergenceWarning\n",
                 "from sklearn.linear_model import LogisticRegression\n",
-                "from sklearn.model_selection import (\n",
-                "    RandomizedSearchCV,\n",
-                "    StratifiedKFold,\n",
-                "    train_test_split,\n",
-                ")\n",
+                "from sklearn.model_selection import RandomizedSearchCV, train_test_split\n",
                 "from sklearn.preprocessing import LabelEncoder\n",
                 "from sklearn.utils import parallel_backend"
             ]
@@ -55,10 +51,10 @@
             "execution_count": 2,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.019971Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.019815Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.022807Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.022530Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.275946Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.275774Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.278473Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.278210Z"
                 },
                 "jukit_cell_id": "6bmUxXR0eb"
             },
@@ -96,10 +92,10 @@
             "execution_count": 3,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.024421Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.024164Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.026483Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.026219Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.279869Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.279626Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.281893Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.281643Z"
                 },
                 "jukit_cell_id": "NVeszTxjt5"
             },
@@ -132,10 +128,10 @@
             "execution_count": 4,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.028051Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.027799Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.155147Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.154776Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.283175Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.283077Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.416017Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.415616Z"
                 },
                 "jukit_cell_id": "q2xQ1rmSbQ"
             },
@@ -158,10 +154,10 @@
             "execution_count": 5,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.157148Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.156899Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.159366Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.159035Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.418028Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.417903Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.419989Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.419693Z"
                 },
                 "jukit_cell_id": "pwIe7C4Ax4"
             },
@@ -195,10 +191,10 @@
             "execution_count": 6,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.160788Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.160526Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.180111Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.179662Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.421355Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.421131Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.440767Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.440399Z"
                 },
                 "jukit_cell_id": "sGkl0bhWnv"
             },
@@ -225,10 +221,10 @@
             "execution_count": 7,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.181968Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.181718Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.187517Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.187199Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.442246Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.442141Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.447881Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.447587Z"
                 },
                 "jukit_cell_id": "qcMAUWzcSj"
             },
@@ -254,10 +250,10 @@
             "execution_count": 8,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.189001Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.188784Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.193131Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.192708Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.449247Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.449147Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.455730Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.455470Z"
                 },
                 "jukit_cell_id": "kbCV2fS53j"
             },
@@ -285,10 +281,10 @@
             "execution_count": 9,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.194450Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.194241Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.199940Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.199576Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.457066Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.456971Z",
+                    "iopub.status.idle": "2023-09-01T13:33:05.462186Z",
+                    "shell.execute_reply": "2023-09-01T13:33:05.461938Z"
                 },
                 "jukit_cell_id": "MHDxE0uhWH"
             },
@@ -297,7 +293,7 @@
                 "test_frac = 0.2\n",
                 "val_frac = 0.15\n",
                 "\n",
-                "X_train, X_test, y_train, y_test = train_test_split(featdf, platedf[gene_column], test_size = test_frac, random_state=0, shuffle=True)"
+                "X_train, X_test, y_train, y_test = train_test_split(featdf, platedf[gene_column], test_size = test_frac, random_state=0, shuffle=True, stratify=platedf[gene_column])"
             ]
         },
         {
@@ -314,10 +310,10 @@
             "execution_count": 10,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.201234Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.200985Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.315457Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.314938Z"
+                    "iopub.execute_input": "2023-09-01T13:33:05.463535Z",
+                    "iopub.status.busy": "2023-09-01T13:33:05.463437Z",
+                    "iopub.status.idle": "2023-09-01T13:33:06.143342Z",
+                    "shell.execute_reply": "2023-09-01T13:33:06.142934Z"
                 },
                 "jukit_cell_id": "EoWGvinowW"
             },
@@ -354,10 +350,10 @@
             "execution_count": 11,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.317478Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.317339Z",
-                    "iopub.status.idle": "2023-08-17T16:46:34.321051Z",
-                    "shell.execute_reply": "2023-08-17T16:46:34.320680Z"
+                    "iopub.execute_input": "2023-09-01T13:33:06.145331Z",
+                    "iopub.status.busy": "2023-09-01T13:33:06.145180Z",
+                    "iopub.status.idle": "2023-09-01T13:33:06.148696Z",
+                    "shell.execute_reply": "2023-09-01T13:33:06.148423Z"
                 },
                 "jukit_cell_id": "4E094VqTVl"
             },
@@ -368,9 +364,6 @@
                 "    'C': uniform(loc=0.5, scale=1.5),\n",
                 "    \"l1_ratio\": uniform(loc=0, scale=1),\n",
                 "}\n",
-                "\n",
-                "# Define stratification method\n",
-                "strat_obj = StratifiedKFold(n_splits=5, shuffle=True, random_state=0)\n",
                 "\n",
                 "# Create a Logistic Regression model\n",
                 "logreg_params = {\n",
@@ -385,7 +378,7 @@
                 "    \"param_distributions\": param_dist,\n",
                 "    \"scoring\": \"precision\",\n",
                 "    \"n_iter\": 100,\n",
-                "    \"cv\": strat_obj,\n",
+                "    \"cv\": 5,\n",
                 "    \"random_state\": 0,\n",
                 "    \"n_jobs\": -1,\n",
                 "}"
@@ -405,10 +398,10 @@
             "execution_count": 12,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:46:34.322867Z",
-                    "iopub.status.busy": "2023-08-17T16:46:34.322625Z",
-                    "iopub.status.idle": "2023-08-17T16:53:19.476298Z",
-                    "shell.execute_reply": "2023-08-17T16:53:19.475891Z"
+                    "iopub.execute_input": "2023-09-01T13:33:06.150016Z",
+                    "iopub.status.busy": "2023-09-01T13:33:06.149817Z",
+                    "iopub.status.idle": "2023-09-01T13:39:55.805395Z",
+                    "shell.execute_reply": "2023-09-01T13:39:55.804768Z"
                 },
                 "jukit_cell_id": "YY8qaxm1l1"
             },
@@ -443,10 +436,10 @@
             "execution_count": 13,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:53:19.478510Z",
-                    "iopub.status.busy": "2023-08-17T16:53:19.478352Z",
-                    "iopub.status.idle": "2023-08-17T16:59:48.318350Z",
-                    "shell.execute_reply": "2023-08-17T16:59:48.317710Z"
+                    "iopub.execute_input": "2023-09-01T13:39:55.808015Z",
+                    "iopub.status.busy": "2023-09-01T13:39:55.807835Z",
+                    "iopub.status.idle": "2023-09-01T13:46:38.468473Z",
+                    "shell.execute_reply": "2023-09-01T13:46:38.468023Z"
                 },
                 "jukit_cell_id": "HoOPZ90KFZ"
             },
@@ -482,10 +475,10 @@
             "execution_count": 14,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:59:48.321003Z",
-                    "iopub.status.busy": "2023-08-17T16:59:48.320788Z",
-                    "iopub.status.idle": "2023-08-17T16:59:48.328672Z",
-                    "shell.execute_reply": "2023-08-17T16:59:48.328422Z"
+                    "iopub.execute_input": "2023-09-01T13:46:38.470611Z",
+                    "iopub.status.busy": "2023-09-01T13:46:38.470501Z",
+                    "iopub.status.idle": "2023-09-01T13:46:38.476534Z",
+                    "shell.execute_reply": "2023-09-01T13:46:38.476296Z"
                 },
                 "jukit_cell_id": "XmQTfarxJe"
             },
@@ -526,10 +519,10 @@
             "execution_count": 15,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-08-17T16:59:48.358203Z",
-                    "iopub.status.busy": "2023-08-17T16:59:48.358037Z",
-                    "iopub.status.idle": "2023-08-17T16:59:48.368806Z",
-                    "shell.execute_reply": "2023-08-17T16:59:48.368428Z"
+                    "iopub.execute_input": "2023-09-01T13:46:38.500321Z",
+                    "iopub.status.busy": "2023-09-01T13:46:38.500182Z",
+                    "iopub.status.idle": "2023-09-01T13:46:38.508417Z",
+                    "shell.execute_reply": "2023-09-01T13:46:38.508160Z"
                 },
                 "jukit_cell_id": "KRaXZbEIzO"
             },
@@ -553,7 +546,7 @@
     "metadata": {
         "anaconda-cloud": {},
         "kernelspec": {
-            "display_name": "Python 3 (ipykernel)",
+            "display_name": "python",
             "language": "python",
             "name": "python3"
         },
