Added updates from pr review

--- a/1.train_models/log_reg_plates_cp_fs_data/plates_3_3p/plates_3_3p_classify_genotype.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plates_3_3p/plates_3_3p_classify_genotype.ipynb
@@ -249,7 +249,7 @@
                 "plate3df[\"Metadata_plate\"] = \"3\"\n",
                 "plate3pdf[\"Metadata_plate\"] = \"3p\"\n",
                 "\n",
-                "common_columns = list(plate3df.columns.intersection(plate3pdf.columns))\n",
+                "common_columns = plate3df.columns.intersection(plate3pdf.columns).to_list()\n",
                 "plate3df = plate3df.loc[:, common_columns]\n",
                 "plate3pdf = plate3pdf.loc[:, common_columns]\n",
                 "\n",
