Added refactored training code

--- a/1.train_models/log_reg_plates_cp_fs_data/plates_3_3p/plates_3_3p_classify_genotype.ipynb
+++ b/1.train_models/log_reg_plates_cp_fs_data/plates_3_3p/plates_3_3p_classify_genotype.ipynb
@@ -23,10 +23,10 @@
             "execution_count": 1,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:21.487418Z",
-                    "iopub.status.busy": "2023-09-11T23:42:21.487152Z",
-                    "iopub.status.idle": "2023-09-11T23:42:22.560810Z",
-                    "shell.execute_reply": "2023-09-11T23:42:22.560420Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.019686Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.019589Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.407242Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.406899Z"
                 },
                 "jukit_cell_id": "Hh2oHsBslU"
             },
@@ -42,8 +42,7 @@
                 "from sklearn.exceptions import ConvergenceWarning\n",
                 "from sklearn.linear_model import LogisticRegression\n",
                 "from sklearn.model_selection import RandomizedSearchCV\n",
-                "from sklearn.utils import parallel_backend\n",
-                "import sklearn"
+                "from sklearn.utils import parallel_backend"
             ]
         },
         {
@@ -60,10 +59,10 @@
             "execution_count": 2,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:22.563293Z",
-                    "iopub.status.busy": "2023-09-11T23:42:22.563079Z",
-                    "iopub.status.idle": "2023-09-11T23:42:22.565934Z",
-                    "shell.execute_reply": "2023-09-11T23:42:22.565618Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.408991Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.408829Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.411455Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.411190Z"
                 },
                 "jukit_cell_id": "efxmwjuUJq"
             },
@@ -101,10 +100,10 @@
             "execution_count": 3,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:22.567839Z",
-                    "iopub.status.busy": "2023-09-11T23:42:22.567588Z",
-                    "iopub.status.idle": "2023-09-11T23:42:22.570263Z",
-                    "shell.execute_reply": "2023-09-11T23:42:22.569965Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.412877Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.412611Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.414641Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.414387Z"
                 },
                 "jukit_cell_id": "PiUBmViMHJ"
             },
@@ -128,10 +127,10 @@
             "execution_count": 4,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:22.572127Z",
-                    "iopub.status.busy": "2023-09-11T23:42:22.571868Z",
-                    "iopub.status.idle": "2023-09-11T23:42:22.574457Z",
-                    "shell.execute_reply": "2023-09-11T23:42:22.574159Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.415871Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.415774Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.418140Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.417883Z"
                 },
                 "jukit_cell_id": "35gBV3H5Jo"
             },
@@ -170,10 +169,10 @@
             "execution_count": 5,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:22.576209Z",
-                    "iopub.status.busy": "2023-09-11T23:42:22.576066Z",
-                    "iopub.status.idle": "2023-09-11T23:42:23.542844Z",
-                    "shell.execute_reply": "2023-09-11T23:42:23.542442Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.419339Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.419240Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.753130Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.752751Z"
                 },
                 "jukit_cell_id": "N0H3V1RbTX"
             },
@@ -200,10 +199,10 @@
             "execution_count": 6,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:23.545270Z",
-                    "iopub.status.busy": "2023-09-11T23:42:23.544929Z",
-                    "iopub.status.idle": "2023-09-11T23:42:23.547096Z",
-                    "shell.execute_reply": "2023-09-11T23:42:23.546806Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.755282Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.755081Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.757109Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.756834Z"
                 },
                 "jukit_cell_id": "KvBqG6FQwJ"
             },
@@ -236,10 +235,10 @@
             "execution_count": 7,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:23.548918Z",
-                    "iopub.status.busy": "2023-09-11T23:42:23.548664Z",
-                    "iopub.status.idle": "2023-09-11T23:42:23.626309Z",
-                    "shell.execute_reply": "2023-09-11T23:42:23.625934Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.758459Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.758204Z",
+                    "iopub.status.idle": "2023-09-15T04:34:58.834583Z",
+                    "shell.execute_reply": "2023-09-15T04:34:58.834208Z"
                 },
                 "jukit_cell_id": "bCflTponOs"
             },
@@ -271,10 +270,10 @@
             "execution_count": 8,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:23.628010Z",
-                    "iopub.status.busy": "2023-09-11T23:42:23.627903Z",
-                    "iopub.status.idle": "2023-09-11T23:42:31.233227Z",
-                    "shell.execute_reply": "2023-09-11T23:42:31.232809Z"
+                    "iopub.execute_input": "2023-09-15T04:34:58.836128Z",
+                    "iopub.status.busy": "2023-09-15T04:34:58.836024Z",
+                    "iopub.status.idle": "2023-09-15T04:35:06.237537Z",
+                    "shell.execute_reply": "2023-09-15T04:35:06.237117Z"
                 },
                 "jukit_cell_id": "3zSY77VsBB"
             },
@@ -310,10 +309,10 @@
             "execution_count": 9,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:31.235326Z",
-                    "iopub.status.busy": "2023-09-11T23:42:31.235217Z",
-                    "iopub.status.idle": "2023-09-11T23:42:31.238694Z",
-                    "shell.execute_reply": "2023-09-11T23:42:31.238428Z"
+                    "iopub.execute_input": "2023-09-15T04:35:06.239833Z",
+                    "iopub.status.busy": "2023-09-15T04:35:06.239687Z",
+                    "iopub.status.idle": "2023-09-15T04:35:06.243507Z",
+                    "shell.execute_reply": "2023-09-15T04:35:06.243242Z"
                 },
                 "jukit_cell_id": "4E094VqTVl"
             },
@@ -361,10 +360,10 @@
             "execution_count": 10,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-11T23:42:31.240104Z",
-                    "iopub.status.busy": "2023-09-11T23:42:31.240005Z",
-                    "iopub.status.idle": "2023-09-12T02:16:00.838102Z",
-                    "shell.execute_reply": "2023-09-12T02:16:00.837443Z"
+                    "iopub.execute_input": "2023-09-15T04:35:06.244836Z",
+                    "iopub.status.busy": "2023-09-15T04:35:06.244587Z",
+                    "iopub.status.idle": "2023-09-15T07:02:01.689111Z",
+                    "shell.execute_reply": "2023-09-15T07:02:01.688485Z"
                 },
                 "jukit_cell_id": "YY8qaxm1l1"
             },
@@ -399,10 +398,10 @@
             "execution_count": 11,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-12T02:16:00.840821Z",
-                    "iopub.status.busy": "2023-09-12T02:16:00.840646Z",
-                    "iopub.status.idle": "2023-09-12T02:21:12.341519Z",
-                    "shell.execute_reply": "2023-09-12T02:21:12.341029Z"
+                    "iopub.execute_input": "2023-09-15T07:02:01.691491Z",
+                    "iopub.status.busy": "2023-09-15T07:02:01.691359Z",
+                    "iopub.status.idle": "2023-09-15T07:07:04.370625Z",
+                    "shell.execute_reply": "2023-09-15T07:07:04.370147Z"
                 },
                 "jukit_cell_id": "HoOPZ90KFZ"
             },
@@ -438,23 +437,37 @@
             "execution_count": 12,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-12T02:21:12.343726Z",
-                    "iopub.status.busy": "2023-09-12T02:21:12.343556Z",
-                    "iopub.status.idle": "2023-09-12T02:21:24.617227Z",
-                    "shell.execute_reply": "2023-09-12T02:21:24.616807Z"
+                    "iopub.execute_input": "2023-09-15T07:07:04.372567Z",
+                    "iopub.status.busy": "2023-09-15T07:07:04.372456Z",
+                    "iopub.status.idle": "2023-09-15T07:07:04.378665Z",
+                    "shell.execute_reply": "2023-09-15T07:07:04.378413Z"
                 },
                 "jukit_cell_id": "XmQTfarxJe"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "['model_data/feature_names_log_reg_cp_fs_data_plate_3_3p.joblib']"
+                        ]
+                    },
+                    "execution_count": 12,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "data_suffix = \"log_reg_cp_fs_data_plate_3_3p\"\n",
                 "\n",
                 "# Save the models\n",
-                "dump(logreg, f\"{models_path}/{data_suffix}.joblib\")\n",
-                "dump(shuf_logreg, f\"{models_path}/log_reg_shuf_cp_fs_data_plate_3_3P.joblib\")\n",
+                "dump(random_search.best_estimator_, f\"{models_path}/{data_suffix}.joblib\")\n",
+                "dump(shuf_random_search.best_estimator_, f\"{models_path}/log_reg_shuf_cp_fs_data_plate_3_3P.joblib\")\n",
                 "\n",
                 "# Save label encoder\n",
-                "dump(le, f\"{data_path}/label_encoder_{data_suffix}.joblib\")"
+                "dump(le, f\"{data_path}/label_encoder_{data_suffix}.joblib\")\n",
+                "\n",
+                "# Save the feature names\n",
+                "dump(random_search.feature_names_in_, f\"{data_path}/feature_names_{data_suffix}.joblib\")"
             ]
         },
         {
@@ -471,10 +484,10 @@
             "execution_count": 13,
             "metadata": {
                 "execution": {
-                    "iopub.execute_input": "2023-09-12T02:21:24.619243Z",
-                    "iopub.status.busy": "2023-09-12T02:21:24.619120Z",
-                    "iopub.status.idle": "2023-09-12T02:21:24.658289Z",
-                    "shell.execute_reply": "2023-09-12T02:21:24.657952Z"
+                    "iopub.execute_input": "2023-09-15T07:07:04.413592Z",
+                    "iopub.status.busy": "2023-09-15T07:07:04.413451Z",
+                    "iopub.status.idle": "2023-09-15T07:07:04.455228Z",
+                    "shell.execute_reply": "2023-09-15T07:07:04.454899Z"
                 },
                 "jukit_cell_id": "KRaXZbEIzO"
             },
@@ -498,7 +511,7 @@
     "metadata": {
         "anaconda-cloud": {},
         "kernelspec": {
-            "display_name": "Python 3 (ipykernel)",
+            "display_name": "python",
             "language": "python",
             "name": "python3"
         },
